--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,40 @@
 body {
-    background-image: "img/gold.jpg";
+    background-image: url("../img/gold.jpg");
+}
+h1 {
+    text-shadow: 5px 5px 5px black;
+    font-size: 150px;
+    text-align: center;
 }
 
 #crust {
-    background-color: black;
-    color: goldenrod;
-    width: 600px;
-    height: 400px;
+    vertical-align: middle;
+    color: rgba(241, 225, 129, 0.848);
+    border-radius: 25px;
+    background: black;
+    padding: 30px;
+    width: 400px;
+    height: 250px;
+    float: left;
+}
+
+#toppings {
+    vertical-align: middle;
+    color: rgba(241, 225, 129, 0.848);
+    border-radius: 25px;
+    background: black;
+    padding: 30px;
+    width: 400px;
+    height: 250px;
+    float: right;
+}
+
+.results {
+    text-align: center;
+    color: rgba(241, 225, 129, 0.848);
+    border-radius: 25px;
+    background: black;
+    padding: 30px;
+    width: 300px;
+    height: 150px;
 }
