--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,12 @@ h1 {
 
 
 .results {
-    text-align: right;
+    text-align: left;
     color: rgba(241, 225, 129, 0.848);
     border-radius: 25px;
     background: black;
     padding: 30px;
     width: 300px;
     height: 150px;
+    float:right;
 }
