--- a/css/styles.css
+++ b/css/styles.css
@@ -5,27 +5,32 @@ h1 {
     text-shadow: 5px 5px 5px black;
     font-size: 150px;
     text-align: center;
+    padding: 25px
 }
 
 #pizza {
     vertical-align: middle;
-    color: rgba(241, 225, 129, 0.848);
+    color: #f1e181d8;
     border-radius: 25px;
     background: black;
     padding: 30px;
     width: 400px;
-    height: 500px;
+    height: 800px;
     float: left;
 }
 
 
 .results {
     text-align: left;
-    color: rgba(241, 225, 129, 0.848);
+    color: #f1e181d8;
     border-radius: 25px;
     background: black;
     padding: 30px;
     width: 300px;
     height: 150px;
     float:right;
+}
+
+.btn {
+    background-color: #f1e181d8;
 }
