--- a/css/styles.css
+++ b/css/styles.css
@@ -27,10 +27,14 @@ h1 {
     background: black;
     padding: 30px;
     width: 300px;
-    height: 150px;
+    height: 225px;
     float:right;
 }
 
 .btn {
+    background-color: #f1e181d8;
+}
+
+#reset {
     background-color: #f1e181d8;
 }
